# QtProject

face/: CMakeLists.txt  childwindow.cpp  childwindow.h  childwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
face_attendence_system/: CMakeLists.txt  childwindow.cpp  childwindow.h  mainwindow.cpp  mainwindow.h
face_multipool/: CMakeLists.txt  childwindow.cpp  childwindow.h  childwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread.cpp  thread.h
yolo_software/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread.cpp  thread.h
yolosofeware/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
